--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -22,6 +22,9 @@ repositories {
     flatDir {
         dirs '../libs'
     }
+    google()
+    mavenCentral()
+    jcenter()
 }
 
 apply from: 'build.release.gradle'
